--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "description": "An Elixir regular expression editor & tester.",
   "repository": "https://github.com/lpil/elixre",
   "devDependencies": {
+    "angular": "^1.3.15",
     "babelify": "^5.0.4",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.5.0",
+    "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "^3.1.0"
   },
   "scripts": {
