--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-karma": "^0.10.1",
+    "jasmine-core": "^2.2.0",
+    "karma": "^0.12.31",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^3.1.0"
   },
   "scripts": {
