--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/lpil/elixre",
   "devDependencies": {
     "angular": "^1.3.15",
+    "angular-sanitize": "^1.3.15",
     "babelify": "^5.0.4",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.5.0",
