--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babelify": "^5.0.4",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.5.0",
+    "grunt-contrib-uglify": "^0.4.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^0.10.1",
     "grunt-sass": "^0.18.1",
