--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/lpil/elixre",
   "devDependencies": {
     "angular": "^1.3.15",
+    "angular-mocks": "^1.3.15",
     "angular-sanitize": "^1.3.15",
     "babelify": "^5.0.4",
     "grunt": "^0.4.5",
@@ -16,6 +17,7 @@
     "grunt-sass": "^0.18.1",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
+    "karma-babel-preprocessor": "^5.0.0",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^3.1.0"
