--- a/.jshintrc
+++ b/.jshintrc
@@ -23,6 +23,7 @@
     "inject": true,
     "beforeEach": true,
     "afterEach": true,
-    "expect": true
+    "expect": true,
+    "spyOn": true
   }
 }
