--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babelify": "^5.0.4",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.5.0",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-uglify": "^0.4.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^0.10.1",
