--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Louis Pilfold <louis@lpil.uk>",
   "description": "An Elixir regular expression editor & tester.",
   "repository": "https://github.com/lpil/elixre",
-  "devDependencies": {
+  "dependencies": {
     "angular": "^1.3.15",
     "angular-mocks": "^1.3.15",
     "angular-sanitize": "^1.3.15",
@@ -14,14 +14,16 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-uglify": "^0.4.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "^0.10.1",
     "grunt-sass": "^0.18.1",
+    "load-grunt-tasks": "^3.1.0"
+  },
+  "devDependencies": {
+    "grunt-karma": "^0.10.1",
     "jasmine-core": "^2.2.0",
     "karma": "^0.12.31",
     "karma-babel-preprocessor": "^5.0.0",
     "karma-jasmine": "^0.3.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "load-grunt-tasks": "^3.1.0"
+    "karma-phantomjs-launcher": "^0.1.4"
   },
   "scripts": {
     "test": "grunt test"
