--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-# Mix artifacts
 /_build
+/cover
 /deps
-/*.ez
-
-# Generate on crash by the VM
 erl_crash.dump
-
-node_modules
-/priv/static/*
+*.ez
