--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: elixir
 
 elixir:
-  - 1.0.4
+  - 1.2.4
 
 otp_release:
-  - 17.4
+  - 18.1
 
 env: MIX_ENV=test
 
@@ -17,6 +17,7 @@ before_install:
   - npm install
 
 script:
-  - mix test
-  - grunt test
-  - grunt build
+  # - mix test
+  # - mix dogma
+  - npm build
+  - npm test
