--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An Elixir regular expression editor & tester.",
   "main": "n/a",
   "scripts": {
-    "build": "./node_modules/webpack/bin/webpack.js --config js/webpack.config.js --progress --colors",
+    "start": "./node_modules/webpack/bin/webpack.js --config js/webpack.config.js --progress --colors --watch",
     "test": "./node_modules/karma/bin/karma start js/karma.conf.js --colors",
     "single-run-test": "./node_modules/karma/bin/karma start js/karma.conf.js --single-run --colors"
   },
@@ -25,8 +25,12 @@
   "dependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.7.4",
+    "babel-eslint": "^6.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "eslint": "^2.5.1",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^4.2.3",
     "react": "^0.14.7",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
@@ -41,5 +45,67 @@
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "phantomjs-prebuilt": "^2.1.7"
+  },
+  "eslintConfig": {
+    "parser": "babel-eslint",
+    "ecmaFeatures": {
+      "modules": true
+    },
+    "env": {
+      "node": true,
+      "browser": true,
+      "mocha": true
+    },
+    "plugins": [
+      "react"
+    ],
+    "extends": "eslint:recommended",
+    "rules": {
+      "indent": [
+        2,
+        2,
+        {
+          "SwitchCase": 1
+        }
+      ],
+      "max-len": [2, 80, 4],
+      "no-console": 1,
+      "semi": 2,
+      "space-before-function-paren": 2,
+      "react/display-name": 0,
+      "react/forbid-prop-types": 1,
+      "react/jsx-boolean-value": 1,
+      "react/jsx-closing-bracket-location": 1,
+      "react/jsx-curly-spacing": 1,
+      "react/jsx-indent-props": 1,
+      "react/jsx-max-props-per-line": 0,
+      "react/jsx-no-bind": 1,
+      "react/jsx-no-duplicate-props": 1,
+      "react/jsx-no-literals": 0,
+      "react/jsx-no-undef": 1,
+      "jsx-quotes": 1,
+      "react/sort-prop-types": 1,
+      "react/jsx-sort-props": 1,
+      "react/jsx-uses-react": 1,
+      "react/jsx-uses-vars": 1,
+      "react/no-danger": 1,
+      "react/no-did-mount-set-state": 1,
+      "react/no-did-update-set-state": 1,
+      "react/no-direct-mutation-state": 1,
+      "react/no-multi-comp": 1,
+      "react/no-set-state": 1,
+      "react/no-unknown-property": 1,
+      "react/prefer-es6-class": 1,
+      "react/prop-types": 1,
+      "react/react-in-jsx-scope": 1,
+      "react/require-extension": 1,
+      "react/self-closing-comp": 1,
+      "react/sort-comp": 1,
+      "react/wrap-multilines": 1,
+      "quotes": [
+        2,
+        "double"
+      ]
+    }
   }
 }
