--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "./node_modules/webpack/bin/webpack.js --config js/webpack.config.js --progress --colors --watch",
     "test": "./node_modules/karma/bin/karma start js/karma.conf.js --colors",
-    "single-run-test": "./node_modules/karma/bin/karma start js/karma.conf.js --single-run --colors"
+    "single-run-test": "./node_modules/karma/bin/karma start js/karma.conf.js --single-run --colors",
+    "clear": "rm -rf public"
   },
   "repository": {
     "type": "git",
