--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "babel-core": "^6.7.4",
     "babel-eslint": "^6.0.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-assign": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
+    "deep-freeze": "0.0.1",
     "eslint": "^2.5.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.3",
@@ -72,10 +74,17 @@
           "SwitchCase": 1
         }
       ],
-      "max-len": [2, 80, 4],
+      "max-len": [
+        2,
+        80,
+        4
+      ],
       "no-console": 1,
       "semi": 2,
-      "space-before-function-paren": 2,
+      "space-before-function-paren": [
+        2,
+        "never"
+      ],
       "react/display-name": 0,
       "react/forbid-prop-types": 1,
       "react/jsx-boolean-value": 1,
@@ -106,10 +115,6 @@
       "react/self-closing-comp": 1,
       "react/sort-comp": 1,
       "react/wrap-multilines": 1,
-      "space-before-function-paren": [
-        2,
-        "never"
-      ],
       "quotes": [
         2,
         "double"
