Run Elixre tests and Linter on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - npm install
 
 script:
-  # - mix test
-  # - mix dogma
+  - mix test
+  - mix dogma
   - npm build
   - npm run single-run-test
