--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-object-assign": "^6.5.0",
     "babel-preset-es2015": "^6.6.0",
+    "css-loader": "^0.23.1",
     "deep-freeze": "0.0.1",
     "eslint": "^2.5.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.3",
+    "node-sass": "^3.4.2",
     "react": "^0.14.7",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.12.14"
   },
   "devDependencies": {
