Run scss-lint on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,11 @@ notifications:
 
 before_install:
   - npm install
+  - gem install scss_lint
 
 script:
   - mix test
   - mix dogma
   - npm build
   - npm run single-run-test
+  - scss-lint .
