--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.2.3",
     "node-sass": "^3.4.2",
+    "normalize.css": "^4.0.0",
     "react": "^0.14.7",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
