--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "n/a",
   "scripts": {
     "start": "./node_modules/webpack/bin/webpack.js --config js/webpack.config.js --progress --colors --watch",
+    "build": "./node_modules/webpack/bin/webpack.js --config js/webpack.config.js --colors",
     "test": "./node_modules/karma/bin/karma start js/karma.conf.js --colors",
     "single-run-test": "./node_modules/karma/bin/karma start js/karma.conf.js --single-run --colors",
     "clear": "rm -rf public"
