--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
   "name": "elixre",
   "version": "2.0.0",
-  "description": "An Elixir regular expression editor & tester.",
+  "description": "",
   "main": "n/a",
-  "scripts": {
-    "start": "./node_modules/webpack/bin/webpack.js --config js/webpack.config.js --progress --colors --watch",
-    "build": "./node_modules/webpack/bin/webpack.js --config js/webpack.config.js --colors",
-    "test": "./node_modules/karma/bin/karma start js/karma.conf.js --colors",
-    "single-run-test": "./node_modules/karma/bin/karma start js/karma.conf.js --single-run --colors",
-    "clear": "rm -rf public"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lpil/elixre.git"
@@ -24,111 +17,18 @@
     "url": "https://github.com/lpil/elixre/issues"
   },
   "homepage": "https://github.com/lpil/elixre#readme",
-  "dependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.7.4",
-    "babel-eslint": "^6.0.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-object-assign": "^6.5.0",
-    "babel-preset-es2015": "^6.6.0",
-    "css-loader": "^0.23.1",
-    "deep-freeze": "0.0.1",
-    "eslint": "^2.5.1",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^4.2.3",
-    "node-sass": "^3.4.2",
-    "normalize.css": "^4.0.0",
-    "react": "^0.14.7",
-    "react-redux": "^4.4.1",
-    "redux": "^3.3.1",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.14"
-  },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "karma": "^0.13.22",
-    "karma-chai": "^0.1.0",
-    "karma-mocha": "^0.2.2",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-webpack": "^1.7.0",
-    "mocha": "^2.4.5",
-    "phantomjs-prebuilt": "^2.1.7"
-  },
-  "eslintConfig": {
-    "parser": "babel-eslint",
-    "ecmaFeatures": {
-      "modules": true
-    },
-    "env": {
-      "node": true,
-      "browser": true,
-      "mocha": true
-    },
-    "plugins": [
-      "react"
-    ],
-    "globals": {
-      "assert": true
-    },
-    "extends": "eslint:recommended",
-    "rules": {
-      "indent": [
-        2,
-        2,
-        {
-          "SwitchCase": 1
-        }
-      ],
-      "max-len": [
-        2,
-        80,
-        4
-      ],
-      "no-console": 1,
-      "semi": 2,
-      "space-before-function-paren": [
-        2,
-        "never"
-      ],
-      "react/display-name": 0,
-      "react/forbid-prop-types": 1,
-      "react/jsx-boolean-value": 1,
-      "react/jsx-closing-bracket-location": 1,
-      "react/jsx-curly-spacing": 1,
-      "react/jsx-indent-props": 1,
-      "react/jsx-max-props-per-line": 0,
-      "react/jsx-no-bind": 1,
-      "react/jsx-no-duplicate-props": 1,
-      "react/jsx-no-literals": 0,
-      "react/jsx-no-undef": 1,
-      "jsx-quotes": 1,
-      "react/sort-prop-types": 1,
-      "react/jsx-sort-props": 1,
-      "react/jsx-uses-react": 1,
-      "react/jsx-uses-vars": 1,
-      "react/no-danger": 1,
-      "react/no-did-mount-set-state": 1,
-      "react/no-did-update-set-state": 1,
-      "react/no-direct-mutation-state": 1,
-      "react/no-multi-comp": 1,
-      "react/no-set-state": 1,
-      "react/no-unknown-property": 1,
-      "react/prefer-es6-class": 1,
-      "react/prop-types": 1,
-      "react/react-in-jsx-scope": 1,
-      "react/require-extension": 1,
-      "react/self-closing-comp": 1,
-      "react/sort-comp": 1,
-      "react/wrap-multilines": 1,
-      "quotes": [
-        2,
-        "double"
-      ],
-      "comma-dangle": [
-        2,
-        "always-multiline"
-      ]
-    }
+    "autoprefixer": "^6.3.6",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.23.1",
+    "elm": "^0.17.0",
+    "elm-hot-loader": "^0.3.2",
+    "elm-webpack-loader": "^3.0.3",
+    "file-loader": "^0.8.5",
+    "html-webpack-plugin": "^2.17.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.13.0"
   }
 }
