--- a/package.json
+++ b/package.json
@@ -30,5 +30,13 @@
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.13.0"
+  },
+  "dependencies": {
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^3.8.0",
+    "normalize.css": "^4.2.0",
+    "postcss-loader": "^0.9.1",
+    "sass-loader": "^4.0.0"
   }
 }
