--- a/package.json
+++ b/package.json
@@ -17,26 +17,23 @@
     "url": "https://github.com/lpil/elixre/issues"
   },
   "homepage": "https://github.com/lpil/elixre#readme",
-  "devDependencies": {
+  "dependencies": {
     "autoprefixer": "^6.3.6",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.23.1",
     "elm": "^0.17.0",
     "elm-hot-loader": "^0.3.2",
     "elm-webpack-loader": "^3.0.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.17.0",
+    "node-sass": "^3.8.0",
+    "normalize.css": "^4.2.0",
+    "postcss-loader": "^0.9.1",
+    "sass-loader": "^4.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.13.0"
-  },
-  "dependencies": {
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "node-sass": "^3.8.0",
-    "normalize.css": "^4.2.0",
-    "postcss-loader": "^0.9.1",
-    "sass-loader": "^4.0.0"
   }
 }
