--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "normalize.css": "^4.2.0",
     "postcss-loader": "^0.9.1",
     "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
