--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ notifications:
   email: false
 
 before_install:
-  - npm install
+  - npm install -g yarn
+  - yarn install
 
 script:
   - make build
