--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ notifications:
   email: false
 
 before_install:
+  - nvm install node
+  - nvm use node
   - npm install -g yarn
   - yarn install
 
