--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,30 @@ env: MIX_ENV=test
 
 sudo: false # faster builds
 
+cache:
+  directories:
+    - sysconfcpus
+    - node_modules
+
 notifications:
   email: false
 
 before_install:
+  - |
+    if [ ! -d sysconfcpus/bin ];
+    then
+      git clone https://github.com/obmarg/libsysconfcpus.git;
+      cd libsysconfcpus;
+      ./configure --prefix=$TRAVIS_BUILD_DIR/sysconfcpus;
+      make && make install;
+      cd ..;
+    fi
   - nvm install node
   - nvm use node
   - npm install -g yarn
   - yarn install
 
 script:
-  - make build
+  - $TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 make build
   - mix test
   - mix dogma
