--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,5 @@ before_install:
 
 script:
   - $TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 make build
+  - $TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 make elm-test
   - mix test
