--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^0.26.1",
     "elm": "^0.18.0",
     "elm-hot-loader": "^0.5.4",
+    "elm-test": "^0.18.2",
     "elm-webpack-loader": "^4.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
