redirect to new domain

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-_build
-cover
-deps
-erl_crash.dump
-*.ez
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
 node_modules
-elm-stuff
-dist
 npm-debug.log
