--- a/package.json
+++ b/package.json
@@ -1,41 +1,24 @@
 {
-  "name": "elixre",
-  "version": "2.0.0",
-  "description": "",
-  "main": "n/a",
+  "name": "heroku-redirect",
+  "version": "1.0.0",
+  "description": "Super simple Node app that redirects all requests for an old Heroku app to a new URL",
+  "main": "web.js",
+  "dependencies": {
+    "express": "^4.15.3"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node web.js"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lpil/elixre.git"
+    "url": "git+https://github.com/kenmickles/heroku-redirect.git"
   },
-  "keywords": [
-    "Elixir",
-    "Regex"
-  ],
-  "author": "Louis Pilfold, et al",
-  "license": "AGPL-3.0",
+  "author": "Ken Mickles <ken@37i.net>",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lpil/elixre/issues"
+    "url": "https://github.com/kenmickles/heroku-redirect/issues"
   },
-  "homepage": "https://github.com/lpil/elixre#readme",
-  "dependencies": {
-    "autoprefixer": "^6.6.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "elm": "^0.18.0",
-    "elm-hot-loader": "^0.5.4",
-    "elm-test": "^0.18.2",
-    "elm-webpack-loader": "^4.2.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.26.0",
-    "node-sass": "^4.3.0",
-    "normalize.css": "^5.0.0",
-    "postcss-loader": "^1.2.2",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^2.4.0"
-  }
+  "homepage": "https://github.com/kenmickles/heroku-redirect#readme"
 }
