--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: elixir
 
 elixir:
-  - 1.4.2
+  - 1.9.2
 
 otp_release:
   - 19.0
@@ -30,8 +30,7 @@ before_install:
     fi
   - nvm install node
   - nvm use node
-  - npm install -g yarn
-  - yarn install
+  - npm i
 
 script:
   - $TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 make build
